[gd_scene load_steps=20 format=3 uid="uid://ccm8gytla43lc"]

[ext_resource type="PackedScene" uid="uid://dcnnln01fponj" path="res://Scenes/Background/parallax_background.tscn" id="1_3toqo"]
[ext_resource type="PackedScene" uid="uid://cjbs2fh6s3xb" path="res://Scenes/Player/main_character.tscn" id="1_bd11h"]
[ext_resource type="Script" uid="uid://dfeqi77q0g0wt" path="res://Script/MainScene/main.gd" id="1_iqa5h"]
[ext_resource type="PackedScene" uid="uid://chte1kdnipojo" path="res://Scenes/trash/Lata.tscn" id="2_omtow"]
[ext_resource type="PackedScene" uid="uid://djw1febh6r6vt" path="res://Scenes/trash/plastico.tscn" id="3_1mr13"]
[ext_resource type="Script" uid="uid://djhcnkf6aopgq" path="res://Script/background/parallax_background.gd" id="3_htofc"]
[ext_resource type="PackedScene" uid="uid://dbpauhvkkpfqw" path="res://Scenes/Background/Map.tscn" id="3_itpvm"]
[ext_resource type="PackedScene" uid="uid://beaqmdsemmucp" path="res://Scenes/trash/vidrio.tscn" id="4_nabaj"]
[ext_resource type="PackedScene" uid="uid://dvsorsiqeet66" path="res://Scenes/Containers/glass_container.tscn" id="5_hbdc3"]
[ext_resource type="PackedScene" uid="uid://siyjt7uvj6lx" path="res://Scenes/Containers/metal.tscn" id="6_q1o3j"]
[ext_resource type="PackedScene" uid="uid://b8pve7n2h616x" path="res://Scenes/Containers/plasticos.tscn" id="7_iqa5h"]
[ext_resource type="PackedScene" uid="uid://du4taax6rx515" path="res://Scenes/UI/ui.tscn" id="12_1mr13"]
[ext_resource type="AudioStream" uid="uid://bmw8h43qmqtgd" path="res://Assets/Music/JDSherbert - Ambiences Music Pack - Junction Jazz.wav" id="13_nabaj"]
[ext_resource type="PackedScene" uid="uid://cjhij3m0d20dc" path="res://Scenes/UI/pausa.tscn" id="14_hkksr"]
[ext_resource type="PackedScene" uid="uid://cw8alvt7xxkpx" path="res://Scenes/UI/Notification.tscn" id="15_qbdmt"]

[sub_resource type="GDScript" id="GDScript_q1o3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1o3j"]
size = Vector2(1279, 115)

[sub_resource type="Curve2D" id="Curve2D_1mr13"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1114.59, -2, 0, 0, 0, 0, 228.776, -2)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mr13"]
size = Vector2(1278.5, 22)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_iqa5h")
object_scenes = Array[PackedScene]([ExtResource("2_omtow"), ExtResource("3_1mr13"), ExtResource("4_nabaj")])

[node name="GameController" type="Node2D" parent="."]
script = SubResource("GDScript_q1o3j")

[node name="Node2D" parent="." instance=ExtResource("3_itpvm")]
position = Vector2(-2, -27)

[node name="Main_character" parent="." instance=ExtResource("1_bd11h")]
position = Vector2(638, 464)

[node name="HeldSlot" type="Node2D" parent="Main_character"]

[node name="ParallaxBackground" parent="." instance=ExtResource("1_3toqo")]
offset = Vector2(0, 3.41)
transform = Transform2D(1, 0, 0, 1, 0, 3.41)
script = ExtResource("3_htofc")

[node name="containers" type="Node2D" parent="."]
z_index = -1
position = Vector2(-72, 0)

[node name="metal" parent="containers" instance=ExtResource("6_q1o3j")]
position = Vector2(820, 506)
scale = Vector2(0.22, 0.22)

[node name="Plasticos" parent="containers" instance=ExtResource("7_iqa5h")]
position = Vector2(714, 509)
scale = Vector2(0.22, 0.22)

[node name="Vidrios" parent="containers" instance=ExtResource("5_hbdc3")]
position = Vector2(613, 523)
scale = Vector2(0.22, 0.22)

[node name="SpawnArea" type="Node2D" parent="."]

[node name="Ground" type="Area2D" parent="." groups=["ground"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(638.5, 622.5)
shape = SubResource("RectangleShape2D_q1o3j")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="UI" parent="." instance=ExtResource("12_1mr13")]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-29.5067, 0)
scale = Vector2(1.02505, 1)
curve = SubResource("Curve2D_1mr13")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1114.59, -2)
rotation = 3.14159

[node name="Backgroundmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_nabaj")
volume_db = -13.185
autoplay = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(640.75, 579)
shape = SubResource("RectangleShape2D_1mr13")

[node name="Pausa" parent="." instance=ExtResource("14_hkksr")]

[node name="CanvasLayer" parent="." instance=ExtResource("15_qbdmt")]

[connection signal="area_entered" from="Ground" to="." method="_on_ground_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
